add margin to highlighter

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -60,6 +60,7 @@ div.highlight {
   padding-right: 5%;
   padding-bottom: 5%;
   border-radius: 65px;
+  margin-top: 3em;
 }
 .highlighter-image {
 }
