add function to arrows

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -15,7 +15,7 @@
                 </a>
             {% endif %}
         </div>
-        <img src="{{ site.baseurl }}/assets/img/arrow-down.png" alt="placeholder"  class="arrow-image is-pulled-left is-hidden-mobile"> 
+        <img src="{{ site.baseurl }}/assets/img/arrow-down.png" alt="placeholder"  class="arrow-image is-pulled-left is-hidden-mobile" onClick="document.getElementById('main').scrollIntoView();"> 
     </div>
 </section>
 <i class="fas {{ section.icon }}"></i>
