--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,11 @@ The Default layout that everything is using
         {% else %}
             
         {% endunless %}
-        <div class="content-wrapper has-background-primary-light">
+        <div id="main" class="content-wrapper has-background-primary-light">
             
             {% include story-slider.html %}
             <div class="columns is-centered">
-                <div class="column is-10-desktop is-12-tablet">
+                <div id="content" class="column is-10-desktop is-12-tablet">
                     {% include introduction.html %}
                     {% include left-right-blocks.html %}
                     {{content | markdownify}}
