--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -64,6 +64,15 @@ div.highlight {
 }
 .highlighter-image {
 }
+
+.overtitle {
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
+.title-with-overtitle {
+  margin-top: 0 !important;
+  padding-top: 0.25em !important;
+}
 // Globals
 img.is-rounded {
   border-radius: 65px;
