--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -4,7 +4,10 @@
             {% if page.hero_image %}
                 <img src="{{page.hero_image}}" alt="placeholder"  class="is-rounded is-hidden-mobile">
             {% endif %}
-            <h1 class="title is-1">{{ page.title }}</h1>
+            {% if page.title_above %}
+                <h1 class="overtitle subtitle is-4">{{ page.title_above }}</h1>
+            {% endif %}
+            <h1 class="title is-1  {% if page.title_above %} title-with-overtitle {% endif %}">{{ page.title }}</h1>
             <p class="subtitle is-4">{{ page.subtitle }}</p>
             {% if page.hero_link %}
                 <a href="{{ page.hero_link | relative_url }}" class="button is-rounded is-dark">
