fix wrong previous arrow in story slider

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -324,7 +324,7 @@ img.is-rounded {
   border: 0px !important;
   box-shadow: none !important;
 }
-.slider-navigation-previous,
+.slider-navigation-previous img,
 .slider-navigation-next img {
   border-radius: 0%;
 }
