--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,11 @@ The Default layout that everything is using
     {% include head.html %}
     <body>
         {% include header.html %}
+        <img src="{{ site.baseurl }}/assets/img/arrow-down.png" alt="placeholder"  class="arrow-image is-pulled-left is-hidden-mobile" style="transform: rotate(180deg);" onmouseover="window.scrollBy(0, -10);">
+        <img src="{{ site.baseurl }}/assets/img/arrow-down.png" alt="placeholder"  class="arrow-image is-pulled-left is-hidden-mobile" onmouseover="window.scrollBy(0, 10);">     
         {% unless page.hide_hero %}
             {% include hero.html %}
         {% else %}
-            
         {% endunless %}
         <div id="main" class="content-wrapper has-background-primary-light">
             
