--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -79,8 +79,8 @@ img.is-rounded {
 }
 .arrow-image {
   z-index: 10;
-  position: relative;
-  bottom: -90px;
+  top: 50%;
+  position: sticky;
   width: 64px;
   cursor: pointer;
 }
