add first contact form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@ The Default layout that everything is using
         <div id="main" class="content-wrapper has-background-primary-light">
             
             {% include story-slider.html %}
+            {% include contact.html %}
             <div class="columns is-centered">
                 <div id="content" class="column is-10-desktop is-12-tablet">
                     {% include introduction.html %}
