--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,10 @@ The Default layout that everything is using
     {% include head.html %}
     <body>
         {% include header.html %}
-        <img src="{{ site.baseurl }}/assets/img/arrow-down.png" alt="placeholder"  class="arrow-image is-pulled-left is-hidden-mobile" style="transform: rotate(180deg);" onmouseover="window.scrollBy(0, -10);">
-        <img src="{{ site.baseurl }}/assets/img/arrow-down.png" alt="placeholder"  class="arrow-image is-pulled-left is-hidden-mobile" onmouseover="window.scrollBy(0, 10);">     
+        <div class="arrow-image is-pulled-left is-hidden-mobile">
+            <img src="{{ site.baseurl }}/assets/img/arrow-down.png" alt="placeholder"  class="" onmouseover="window.scrollBy(0, -10);">
+            <img src="{{ site.baseurl }}/assets/img/arrow-down.png" alt="placeholder"  class="is-pointed-down" onmouseover="window.scrollBy(0, 10);">     
+        </div>
         {% unless page.hide_hero %}
             {% include hero.html %}
         {% else %}
