--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,5 +1,5 @@
 {% if page.contact %}
-<div class="green">
+<div class="green contact">
     <h1>Write us</h1>
     Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget
     metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis
@@ -53,13 +53,14 @@
                   ></textarea>
                 </div>
               </div>
-              <div class="checkbox">
-                <input type="checkbox" id="agree" name="privacy-policy" value="agreed" required oninvalid="this.setCustomValidity('Bitte dieses Feld anklicken, um fortzufahren')"
+              <div class="checkbox columns">
+                <div class="column is-1">
+                  <input class="column" type="checkbox" id="agree" name="privacy-policy" value="agreed" required oninvalid="this.setCustomValidity('Bitte dieses Feld anklicken, um fortzufahren')"
                        oninput="this.setCustomValidity('')">
-                <label for="agree">Ich akzeptiere das für die Daten-Erfassung der Dienst Formspark.io genutzt wird. Für nähere Informationen zur Daten-Erfassung <a href="https://formspark.io/legal/privacy-policy/">hier klicken</a>.</label><br><br>
-              </div>
-              <div class="field is-grouped">
-                <div class="control">
+                </div>
+                
+                <div class="column">
+                  <label for="agree">Ich akzeptiere das für die Daten-Erfassung der Dienst Formspark.io genutzt wird. Für nähere Informationen zur Daten-Erfassung <a href="https://formspark.io/legal/privacy-policy/">hier klicken</a>.</label><br><br>
                   <button class="button is-rounded is-dark" type="submit">Abschicken</button>
                 </div>
               </div>
