--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -8,7 +8,7 @@
             {% if page.hero_image %}
                 <img src="{{page.hero_image}}" alt="placeholder"  class="is-rounded is-hidden-mobile">
             {% endif %}
-            <p class="subtitle is-4 {% if page.hero_image %}has-text-centered{% endif %}">{{ page.subtitle }}</p>
+            <p class="subtitle is-4">{{ page.subtitle }}</p>
             {% if page.hero_link %}
                 <a href="{{ page.hero_link | relative_url }}" class="button is-rounded is-dark">
                     <span>{{ page.hero_link_text }}</span>
