--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -233,6 +233,10 @@ img.is-rounded {
   padding: 50px;
 }
 
+.post h3 {
+  font-weight: 600;
+  padding-top: 2rem;
+}
 .card {
   // margin-left: 3rem;
   // margin-right: 3rem;
