add hero image to posts and rename image to preview_image

--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -10,7 +10,7 @@
                       <div class="slider story-slider columns">
                         <div class="slider-image column is-half">
                           <figure class="image">
-                            <img src="{{story.image}}" alt="this used to be photo">             
+                            <img src="{{story.preview_image}}" alt="this used to be photo">             
                           </figure>
                         </div>
                         <div class="slider-content column is-half">
