--- a/_includes/stories.html
+++ b/_includes/stories.html
@@ -7,7 +7,7 @@
           <div class="story-news columns">
             <div class="news-image column is-half">
               <figure class="image">
-                <img src={{story.image}} alt="this used to be photo">             
+                <img src={{story.preview_image}} alt="this used to be photo">             
               </figure>
             </div>
             <div class="news-content column is-half">
