--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -17,6 +17,20 @@
                     </span>
                 </a>
             {% endif %}
+            <div class="buttons-hero has-text-centered">
+                <a  href=""  class="button is-rounded is-dark { % if item.link == page.url % } { % endif % }">
+                    <span class="icon is-small">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span>Zur Übersicht</span>
+                </a>
+                <a  href=""  class="button is-rounded is-dark { % if item.link == page.url % } { % endif % }">
+                    <span>Als PDF Herunterladen</span>
+                    <span class="icon is-small">
+                        <i class="fas fa-chevron-right"></i>
+                    </span>
+                </a>
+            </div>
         </div>
     </div>
 </section>
