--- a/_includes/left-right-blocks.html
+++ b/_includes/left-right-blocks.html
@@ -1,50 +1,47 @@
-{% if page.left_right_layout %}
-    {% assign layout=site.data.[page.left_right_layout] %}
-        {% for section in layout.sections %}
-        {% capture isEven %}{% cycle 'false', 'true' %}{% endcapture %}
-        <div class="card columns">
-        {% if isEven == 'false' %}
-            <div class="card-image left">
-                <figure class="image">
-                    <img src={{section.image}} alt="placeholder" class="left">
-                </figure>
-            </div>
-            <div class="card-content">
-                <h2 class="fas {{ section.icon }} fa-2x">{{ section.title | markdownify  }}</h2>
-                    {{ section.text | markdownify  }}
+{% assign layout=site.data.[include.data] %}
+{% for section in layout.sections %}
+{% capture isEven %}{% cycle 'false', 'true' %}{% endcapture %}
+
+<div class="card columns">
+{% if isEven == 'false' %}
+<div class="card-image left">
+    <figure class="image">
+        <img src={{section.image}} alt="placeholder" class="left">
+    </figure>
+</div>
+<div class="card-content">
+    <h2 class="fas {{ section.icon }} fa-2x">{{ section.title | markdownify  }}</h2>
+            {{ section.text | markdownify  }}
                 
-                    <a href="{{ section.link | relative_url }}" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
-                        <span>{{ section.link_text }}</span>
-                        <span class="icon is-small">
-                        <i class="fas fa-chevron-right fa-xs"></i>
-                        </span>
-                    </a>                    
-            </div>
-        {% else %}
-        <div class="card-content ">
-            <div class="card-image right is-hidden-tablet">
-                <figure class="image">
-                    <img src={{section.image}} alt="placeholder" class="left">
-                </figure>
-            </div>
-            <h2 class="fas {{ section.icon }} fa-2x">{{ section.title | markdownify  }}</h2>
-                {{ section.text | markdownify  }}
-                <a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
-                    <span>{{ section.link_text }}</span>
-                    <span class="icon is-small">
-                    <i class="fas fa-chevron-right fa-xs"></i>
-                    </span>
-                </a>                    
-        </div>
-            <div class="card-image right is-hidden-mobile">
-                <figure class="image">
-                    <img src={{section.image}} alt="placeholder" class="right">
-                </figure>
-            </div>
-        {% endif %}       
-                
-                             
-            </div>
-        <div class="clear"></div>
-        {% endfor %}
-{% endif %}
+<a href="{{ section.link | relative_url }}" class="button is-rounded has-text-centert is-dark {% if item.link == page.url %}is-active{% endif %}">
+    <span>{{ section.link_text }}</span>
+    <span class="icon is-small">
+    <i class="fas fa-chevron-right fa-xs"></i>
+    </span>
+</a>                    
+</div>
+{% else %}
+<div class="card-content ">
+    <div class="card-image right is-hidden-tablet">
+        <figure class="image">
+            <img src={{section.image}} alt="placeholder" class="left">
+        </figure>
+    </div>
+    <h2 class="fas {{ section.icon }} fa-2x">{{ section.title | markdownify  }}</h2>
+        {{ section.text | markdownify  }}
+<a href="{{ section.link | relative_url }}" class="button is-rounded is-dark {% if item.link == page.url %}is-active{% endif %}">
+    <span>{{ section.link_text }}</span>
+    <span class="icon is-small">
+    <i class="fas fa-chevron-right fa-xs"></i>
+    </span>
+</a>                    
+</div>
+<div class="card-image right is-hidden-mobile">
+    <figure class="image">
+        <img src={{section.image}} alt="placeholder" class="right">
+    </figure>
+</div>
+{% endif %}                                
+</div>
+<div class="clear"></div>
+{% endfor %}
