correct object fit for logos in highlighter

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -451,6 +451,7 @@ img.is-rounded {
   background-color: white;
   padding-left: 0;
   padding-right: 0;
+  object-fit: contain;
   height: auto;
   width: auto;
 }
