limit max height of hero image in subpages

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -216,6 +216,7 @@ img.is-rounded {
   margin-right: auto;
   display: block;
   top: 0;
+  max-height: 50vh;
   max-width: auto;
 }
 .buttons-hero {
