--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,10 +1,8 @@
 {% if page.contact %}
 <div class="green contact">
-    <h1>Write us</h1>
-    Lorem ipsum leo risus, porta ac consectetur ac, vestibulum at eros. Donec id elit non mi porta gravida at eget
-    metus. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras mattis
-    consectetur purus sit amet fermentum.
-    <form action="https://submit-form.com/ujaWfjyi"  class="columns">
+    <h1>{{ site.data.contact.title  }}</h1>
+    {{ site.data.contact.introduction  }}
+    <form action="{{ site.data.contact.action }}"  class="columns">
         <div class="column is-6">
             <div class="field">
                 <label class="label">Name</label>
@@ -60,7 +58,7 @@
                 </div>
                 
                 <div class="column">
-                  <label for="agree">Ich akzeptiere das für die Daten-Erfassung der Dienst Formspark.io genutzt wird. Für nähere Informationen zur Daten-Erfassung <a href="https://formspark.io/legal/privacy-policy/">hier klicken</a>.</label><br><br>
+                  <label for="agree">{{ site.data.contact.checkbox  }}</label><br><br>
                   <button class="button is-rounded is-dark" type="submit">Abschicken</button>
                 </div>
               </div>
