first glossary test-entries

--- a/_includes/story-slider.html
+++ b/_includes/story-slider.html
@@ -1,5 +1,6 @@
 {% if page.story_slider %}
     <div class="green">
+      <div class="container">
         <h1 class="slider-titel">Aktuelles</h1>
 
         <div class="carousel">
@@ -35,6 +36,7 @@
                 </div>
             </div>
             {% endfor %}
-		</div>
+          </div>
+		  </div>
     </div>
 {% endif %}
