--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@ The Default layout that everything is using
             {% include latest-story.html %}
             {% include contact.html %}
             <div class="columns is-centered">
-                <div id="content" class="column is-10-desktop is-12-tablet">
+                <div id="content" class="container column is-10-desktop is-12-tablet">
                     {{content | markdownify}}
                 </div>
             </div> 
