fixes for the mobile view

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,6 +52,7 @@ div.highlight {
   padding-right: 5%;
   padding-top: 6rem;
   padding-bottom: 8rem;
+  overflow: hidden;
 }
 
 .highlighter {
@@ -529,33 +530,7 @@ footer .columns {
   font-weight: 600;
 }
 
-// Hacks für Mobil
-@include mobile {
-  .button {
-    height: auto;
-  }
-  .button a,
-  .button span {
-    font-size: 24px !important;
-    font-weight: 600;
-  }
-  .buttons {
-    display: table-caption;
-  }
-  .navbar-menu {
-    background-color: #229387;
-  }
-  .hero.is-medium .hero-body {
-    padding: 5rem 1rem 4.5rem;
-  }
-  .navbar-menu .button {
-    // Buttongröße aus Figma
-    height: auto;
-  }
-  .footer-logos .column {
-    text-align: left !important;
-  }
-}
+
 
 // Tool-Tip
 
@@ -670,4 +645,131 @@ a:hover .tooltip-popup,
   width: 100%;
   display: flow-root;
   margin: auto;
+}
+
+// Mobil
+
+@include mobile {
+  body, .highlighter {
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+}
+h1, h2, h3, p {
+  padding-bottom: 0px;
+}
+  h1,
+  h1 p {
+    font-size: 1.3rem;
+  }
+  .home .hero-body h1 {
+    max-width: none;
+}
+.subtitle {  
+  padding: 35px;
+  padding-top: 0;
+}
+.title.is-1 {
+  font-size: 1.3rem;
+  font-weight: 600;
+}
+.subtitle.is-4 {
+  font-size: 1.1rem;
+}
+  h2,
+  h2 p, .highlighter h2 {
+    font-size: 1.2rem;
+  }
+
+  h3 {
+    font-weight: 600;
+    font-size: 1.7rem;
+  }
+
+  h4 {
+    font-size: 1rem;
+  }
+
+  h5 {
+    font-size: 0.83rem;
+  }
+  .navbar {
+    padding-top: 0.6rem;
+    padding-bottom: 0.6rem;
+}
+  .navbar-brand img {
+    margin: 1rem;
+}
+.hero.is-primary .title {
+  padding-top: 35px;
+}
+.navbar-menu .button.is-dark {
+  background-color: transparent;
+}
+  .button {
+    height: auto;
+  }
+  .button a,
+  .button span {
+    font-size: 0.8rem !important;
+    font-weight: 600;
+  }
+  .buttons {
+    display: table-caption;
+  }
+  .hero-body .button, .content-wrapper .button {
+    padding: 0.5rem !important;
+  }
+  .navbar-menu {
+    background-color: #229387;
+  }
+  .hero.is-medium .hero-body {
+    padding: 5rem 1rem 4.5rem;
+  }
+  .navbar-menu .button {
+    // Buttongröße aus Figma
+    height: auto;
+  }
+  .story-slider, .content-wrapper img {
+    border-radius: 25px !important;
+}
+.column.slider-image img {  
+  border-top-right-radius: 25px !important;
+  border-bottom-left-radius: 0 !important;
+  border-bottom-right-radius: 0 !important;
+}
+  .slider-navigation-next, .slider-navigation-previous {
+    top: 100% !important;
+    width: 20px !important;
+    height: 20px !important;
+    margin-left: 80px;
+    margin-right: 80px;
+  }
+  .card-content p {
+    padding-left: 3rem;
+}
+.card {
+  margin-top: 0;
+}
+.card-content {
+  padding: 2.5rem;
+}
+.left.card-image {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+.right.card-image {
+  padding-bottom: 2.5rem;
+}
+.columns {
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+}
+.two-columns p {
+  column-count: 1;
+  column-gap: 1rem;
+}
+  .footer-logos .column {
+    text-align: left !important;
+  }
 }
