--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -46,7 +46,8 @@ div.highlight {
   top: 30px;
 }
 
-.green {
+.green {  
+  width: 100%;
   background-color: $light;
   padding-left: 5%;
   padding-right: 5%;
