--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,13 +17,13 @@
                 {% for item in site.data.navigation %}
                 {% if item.dropdown %}
                 <div
-                    class="navbar-item has-text-left button is-rounded is-dark has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %}">
+                    class="navbar-item has-text-left button is-rounded is-dark has-dropdown is-hoverable {% if site.fixed_navbar == 'bottom' %} has-dropdown-up {% endif %} {% for subitem in item.dropdown %} {% if subitem.link == page.url %} is-active-header {% endif %} {% endfor %}">
                     <a href="{{ item.link | relative_url }}"
-                        class="navbar-link {% if item.link == page.url %}is-active{% endif %}">{{ item.name }}</a>
+                        class="navbar-link {% if item.link == page.url %} is-active {% endif %}">{{ item.name }}</a>
                     <div class="navbar-dropdown">
                         {% for subitem in item.dropdown %}
                         <a href="{{ subitem.link | relative_url }}"
-                            class="navbar-item button is-rounded is-dark  {% if subitem.link == page.url %}is-active{% endif %}">{{ subitem.name
+                            class="navbar-item button is-rounded is-dark  {% if subitem.link == page.url %} is-active {% endif %}">{{ subitem.name
                             }}</a>
                         {% endfor %}
                     </div>
